[package]
name = "runelib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
rune = { version = "0.14.0" }
rune-modules = { version = "0.14.0", features = ["full"] }
skia-safe = { version = "0.88.0", features = ["textlayout"] }
ciborium = "0.2.2"
serde = "1.0.226"
notify = "8.2.0"